# code-with-abdiwali-api

./: LICENSE  README.md  manage.py  pyproject.toml
blog/: admin.py  models.py  serializer.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py  0003_alter_article_id_alter_category_id_alter_tag_id.py
codewithabdiwali/: asgi.py  settings.py  urls.py  wsgi.py
user/: admin.py  manager.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_user_id.py
